components/gatekeeper-constraints/config-config.yaml
apiVersion: config.gatekeeper.sh/v1alpha1
kind: Config
metadata:
  name: config
  namespace: openshift-gatekeeper-system
spec:
  # taken from https://github.com/open-cluster-management-io/policy-collection/blob/main/community/CM-Configuration-Management/policy-gatekeeper-config-exclude-namespaces.yaml
  sync:
    syncOnly:
      - group: ''
        kind: Namespace
        version: v1
      - group: ''
        kind: Pod
        version: v1
      - group: ''
        kind: Service
        version: v1
      - group: networking.istio.io
        kind: Gateway
        version: v1beta1
      - group: networking.istio.io
        kind: VirtualService
        version: v1beta1
      - group: networking.istio.io
        kind: DestinationRule
        version: v1beta1
      - group: cert-manager.io
        kind: Certificate
        version: v1
