components/gatekeeper-constraints/prohibited-annotations/prohibit-injected-gateway-annotation/test/suite.yaml
apiVersion: test.gatekeeper.sh/v1alpha1
kind: Suite
tests:
- name: prohibited-injected-gateway-annotation
  template: ../../template.yaml
  constraint: ../constraint.yaml
  expansion: expansion.yaml
  cases:
  - name: Deployment with matching annotation & matching namespace selector
    object: deployment-my-ns.yaml
    inventory:
    - ../../../config-config.yaml
    - namespace-my-ns.yaml
    assertions:
    - violations: yes
  - name: Deployment with matching annotation, but no matching namespace selector
    object: deployment-my-ns.yaml
    inventory:
    - namespace-my-ns-negative-match.yaml
    assertions:
    - violations: no
  - name: Deployment with matching annotation & matching namespace selector, but in an excluded namespace
    object: deployment-istio-ingress.yaml
    inventory:
    - namespace-istio-ingress.yaml
    assertions:
    - violations: no
